# GladiusSlicer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  print_settings.json  settings.json  test_settings.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: release.yml  rust.yml
gladius_shared/: Cargo.toml
gladius_shared/gladius_proc_macros/: Cargo.toml
gladius_shared/gladius_proc_macros/src/: lib.rs  settings.rs
gladius_shared/src/: error.rs  lib.rs  messages.rs  settings.rs  types.rs  warning.rs
gladius_shared/src/loader/: mod.rs  stl.rs  threemf.rs
settings/: 0.1_layer_height.json  0.2_layer_height.json  0.3_layer_height.json  ABS_FIlament.json  ABS_Filament.json  BBL_PLA_Filament.json  BBL_x1c.json  CR10.json  PETG_FIlament.json  PETG_Filament.json  PLA_FIlament.json  PLA_Filament.json  PrusaMk3.json  TPU_Filament.json  print.json  temp_tower.json  test.json
src/: Monotone.rs  bounds_checking.rs  calculation.rs  cli.yaml  command_pass.rs  converter.rs  coverter.rs  error.rs  input.rs  loader.rs  main.rs  optimizer.rs  plotter.rs  settings.rs  slice_pass.rs  slicing.rs  tower.rs  types.rs  utils.rs
src/loader/: mod.rs  stl.rs  threemf.rs
src/plotter/: infill.rs  lightning_infill.rs  mod.rs  monotone.rs  perimeter.rs  polygon_operations.rs  support.rs
test_3D_models/: 3DBenchy.3mf  5mm_Calibration_Steps.stl  Bridging_Test_200.stl  Credits.md  FTC_Blue_Circle_Marker.stl  FTC_Red_Square_Marker.stl  FTC_Red_Square_Marker2.3mf  MultipleSquareTest.3mf  SquareTest.3mf  Tolerence_Test.3mf  nut_tower.stl  ring.stl  ring_big.stl  target.stl  test.stl  test_nut.stl  test_ramp.stl  test_simple.stl  test_towers.stl  test_towers2.stl  tornado-tube.stl
