[package]
name = "gladius_slicer"
version = "0.1.0"
authors = ["mrhatman <lucasince@gmail.com>"]
edition = "2018"



[workspace]
members = [
    "gladius_shared"
]

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
simple_logger = "1.11.0"
log = "0.4.14"

nalgebra = "0.27.1"
itertools = "0.10.3"
geo = { version = "0.18.0", features = ["use-serde"] }
geo-clipper = "0.6.0"
geo-svg = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "1.0.2"
serde_json = "1.0.74"
ordered-float = "2.8.0"
rayon = "1.5.1"

rand = "0.8.4"

gladius_shared = { path = "gladius_shared", version = "0.1.0" }