[package]
name = "gladius_slicer"
version = "0.4.1"
authors = ["mrhatman <lucasince@gmail.com>"]
edition = "2021"



[workspace]
members = [ 
    "gladius_shared"
]

[dependencies]
clap = { version = "4", features = ["derive"]}
simple_logger = "5.0.0"
log = "0.4.14"

nalgebra = "0.33"
itertools = "0.13"
geo = { version = "0.28.0", features = ["use-serde"] }
geo-clipper = "0.8.0"
geo-svg = "0.6.3"
geo-offset = { version = "0.3.2", git = "https://github.com/TimTheBig/geo-offset.git" }

serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.2"
serde_json = "1.0.85"
bincode = "1.3.3"
ordered-float = "4.3"
rayon = "1.5.1"

rand = "0.8.4"

gladius_shared = { path = "gladius_shared", version = "0.5.0" }
